# QuantumLeap---Llama.cpp-TurboQuant

./: .gitignore  AMD_GPU_SUPPORT.md  BUGFIX_AVX512.md  EXPERTFLOW_FINAL_RESULTS.md  INTEGRATION_VERIFIED.md  QUICKSTART.md  README.md  REBRAND_SUMMARY.md  RESUMEN_CAMBIOS.md  SETUP_COMPLETO.md  WEB_SEARCH.md  build.sh  completion_response.json  config.json  run.sh  setup.sh
.windsurf/agents/: turboquant-optimizer.yaml
.windsurf/skills/: cuda-kernel-optimization.md  optimize-simd.md  turboquant-integration.md
.windsurf/workflows/: build-and-test.md  deploy-model.md  optimize-kernel.md
api/: requirements.txt  server.py  web_search.py
core/: CMakeLists.txt  EXPERTFLOW.md  INTEGRATION.md
core/build_ef/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json  test_expertflow
core/cmake/: check_avx512.cpp
core/include/expertflow/: expert_cache.h  expert_compressor.h  expert_map.h  expert_prefetcher.h  expertflow_backend.h  moe_dispatch.h  pipeline_controller.h  routing_predictor.h
core/include/turboquant/: cuda_utils.cuh  hadamard.h  polarquant.h  qjl.h  simd_utils.h  turboquant.h  turboquant_kv.h
core/src/expertflow/: expert_cache.cpp  expert_compressor.cpp  expert_map.cpp  expert_prefetcher.cpp  expertflow_backend.cpp  moe_dispatch.cpp  moe_dispatch_cuda.cu  pipeline_controller.cpp  routing_predictor.cpp
core/src/kernels/: dequant_fast_avx2.S  matmul_int2.cu
core/src/llama_integration/: llama_cpp_patch.cpp
core/src/turboquant/: hadamard.cpp  polar_transform.cpp  polar_transform_avx2.S  polar_transform_avx512.S  polarquant.cpp  qjl.cpp  residual_quant.cpp  turboquant_kv.cpp  turboquant_kv_cuda.cu
core/tests/: benchmark_matmul.cpp  benchmark_polar.cpp  test_expertflow.cpp  test_turboquant_kv.cpp
engine/llama.cpp/: .gitignore  CMakeLists.txt
engine/llama.cpp/ggml/src/: CMakeLists.txt
engine/llama.cpp/ggml/src/ggml-expertflow/: CMakeLists.txt  ggml-expertflow.cpp  ggml-expertflow.h
engine/llama.cpp/src/: CMakeLists.txt  llama-context.cpp  llama-graph.cpp  llama.cpp
scripts/: benchmark_expertflow.sh  kill-server-mac.sh  kill-server.bat  kill-server.sh  setup.sh  start.bat  start.sh  start_mac.sh  test_tq3.sh
web/: index.html
web/static/: app.js  style.css
